2005-11-14  Brian Cameron <Brian.Cameron@sun.com>

	* Release 2.13.0.1: 
	* NEWS, configure.ac: Updated
	* docs/C/gdm.xml: Updated version/date.

2005-11-11  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmsetup.c: (install_theme_file), (theme_install_response),
	  (install_new_theme), (get_file_list_from_uri_list),
	  (theme_list_drag_data_received), (setup_local_themed_settings),
	  (setup_remote_themed_settings):  Add drag and drop support for
	  new themes.

2005-11-11  Brian Cameron  <brian.cameron@sun.com>

        * configure.ac: Update check for socklen_t so it
          includes sys/socket.h.  Some BSD platforms define
          socklen_t there.  Patch provided by
          dmacks@netspace.org.  Fixes bug #320930.

2005-11-09  Brian Cameron  <brian.cameron@sun.com>

	* daemon/getvt.c: Oops, fix again.

2005-11-08  Brian Cameron  <brian.cameron@sun.com>

	* daemon/getvt.[ch]: Fix reading of
	  GDM_KEY_FIRST_VT and GDM_KEY_VT_ALLOCATION
	  from config.

2005-11-08  Brian Cameron  <brian.cameron@sun.com>

	* daemon/getvt.c daemon/slave.c: Add errno.h and
	  gdmconfig.h to getvt.h.  Fix Xinerama key in
	  slave.c so code comiles when Xinerama is enabled.

2005-11-07  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.h, gui/gdmchooser.c: No longer 
	  #ifdef the reading of the Multicast config 
	  data.  It's okay if these values are read in
	  even if IPv6 isn't being used.

2005-11-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix check for XInput and add a check
	  for libgen.h.  Fixes bugs #320580 and #320581.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/Makefile.am:  No longer link against
	  libvicious since it isn't used by the gestures
	  listeners.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/getvt.c: Patch to make GDM use VT_GETSTATE for
	  peeking VT freeness.  Patch provided by Samuel Thibault
	  <samuel.thibault@ens-lyon.org>.  Fixes bug #315313.
